Add JPA PostGres

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=demo
+
+# PostgreSQL Connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo
+spring.datasource.username=develop
+spring.datasource.password=develop
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate Settings
+spring.jpa.database=postgresql
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
+
+
+# Debugging
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.springframework.jdbc=DEBUG
+#logging.level.com.zaxxer.hikari=DEBUG
+#logging.level.org.hibernate.orm.connections.pooling=DEBUG
