Turn off sql logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,13 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Hibernate Settings
 spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 
+info.app.name=Spring Actuator Example
+info.app.java.version=10
+info.app.type=Spring Boot
 
 # Debugging
 #logging.level.org.hibernate.SQL=DEBUG
